--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-transformer-sharp": "^2.3.7",
     "netlify-cli": "^2.25.0",
+    "npm-normalize-package-bin": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
