--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,8 @@ jobs:
       working_directory: ~/repo
     steps:
       - gatsby-build
+      - run: echo $NETLIFY_AUTH_TOKEN
+      - run: echo $NETLIFY_SITE_ID
       - run:
           name: Netlify Deploy
           command: ./node_modules/.bin/netlify deploy --auth $NETLIFY_AUTH_TOKEN --site $NETLIFY_SITE_ID --prod --dir=public
