--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,8 +61,15 @@ jobs:
     working_directory: ~/repo
     steps:
       - gatsby-build
-      - run: echo NETLIFY_AUTH_TOKEN
-      - run: echo NETLIFY_SITE_ID
+      - run:
+          name: "What is NETLIFY_AUTH_TOKEN?"
+          command: echo $NETLIFY_AUTH_TOKEN
+      - run:
+          name: "What is NETLIFY_SITE_ID?"
+          command: echo $NETLIFY_SITE_ID
+      - run:
+          name: "What branch am I on now?"
+          command: echo $CIRCLE_BRANCH
       - run:
           name: Netlify Deploy
           command: ./node_modules/.bin/netlify deploy --auth $NETLIFY_AUTH_TOKEN --site $NETLIFY_SITE_ID --prod --dir=public
