--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,20 +56,20 @@ jobs:
   release:
     executor: node-executor
     environment:
-      NETLIFY_SITE_ID: $NETLIFY_SITE_ID
-      NETLIFY_AUTH_TOKEN: $NETLIFY_AUTH_TOKEN
+      NETLIFY_SITE_ID: ${NETLIFY_SITE_ID}
+      NETLIFY_AUTH_TOKEN: ${NETLIFY_AUTH_TOKEN}
     working_directory: ~/repo
     steps:
       - gatsby-build
       - run:
           name: "What is NETLIFY_AUTH_TOKEN?"
-          command: echo $NETLIFY_AUTH_TOKEN
+          command: echo ${NETLIFY_AUTH_TOKEN}
       - run:
           name: "What is NETLIFY_SITE_ID?"
-          command: echo $NETLIFY_SITE_ID
+          command: echo ${NETLIFY_SITE_ID}
       - run:
           name: "What branch am I on now?"
-          command: echo $CIRCLE_BRANCH
+          command: echo ${CIRCLE_BRANCH}
       - run:
           name: Netlify Deploy
           command: ./node_modules/.bin/netlify deploy --auth $NETLIFY_AUTH_TOKEN --site $NETLIFY_SITE_ID --prod --dir=public
