--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,9 +55,9 @@ jobs:
           command: ./node_modules/.bin/netlify deploy --auth $NETLIFY_AUTH_TOKEN --site $NETLIFY_SITE_ID --dir=public
   release:
     executor: node-executor
-    environment:
-      NETLIFY_SITE_ID: ${NETLIFY_SITE_ID}
-      NETLIFY_AUTH_TOKEN: ${NETLIFY_AUTH_TOKEN}
+    # environment:
+    #   NETLIFY_SITE_ID: ${NETLIFY_SITE_ID}
+    #   NETLIFY_AUTH_TOKEN: ${NETLIFY_AUTH_TOKEN}
     working_directory: ~/repo
     steps:
       - gatsby-build
