--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,19 +42,26 @@ workflows:
               only:
                 - master
 jobs:
-  build:
+  test:
     executor: node-executor
     working_directory: ~/repo
     steps:
-      - gatsby-build
       - run:
-          name: Netlify Deploy
-          command: ./node_modules/.bin/netlify deploy --auth $NETLIFY_AUTH_TOKEN --site $NETLIFY_SITE_ID --dir=public
-  release:
-    executor: node-executor
-    working_directory: ~/repo
-    steps:
-      - gatsby-build
-      - run:
-          name: Netlify Deploy
-          command: ./node_modules/.bin/netlify deploy --auth $NETLIFY_AUTH_TOKEN --site $NETLIFY_SITE_ID --prod --dir=public
+          name: "What branch am I on now?"
+          command: echo $CIRCLE_BRANCH
+  # build:
+  #   executor: node-executor
+  #   working_directory: ~/repo
+  #   steps:
+  #     - gatsby-build
+  #     - run:
+  #         name: Netlify Deploy
+  #         command: ./node_modules/.bin/netlify deploy --auth $NETLIFY_AUTH_TOKEN --site $NETLIFY_SITE_ID --dir=public
+  # release:
+  #   executor: node-executor
+  #   working_directory: ~/repo
+  #   steps:
+  #     - gatsby-build
+  #     - run:
+  #         name: Netlify Deploy
+  #         command: ./node_modules/.bin/netlify deploy --auth $NETLIFY_AUTH_TOKEN --site $NETLIFY_SITE_ID --prod --dir=public
