--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
     environment:
       # NETLIFY_SITE_ID: ${NETLIFY_SITE_ID}
       # NETLIFY_AUTH_TOKEN: ${NETLIFY_AUTH_TOKEN}
-      BABY_NAME_Q: ${BABY_NAME}
+      BABY_NAME_Q: "yayay"
     working_directory: ~/repo
     steps:
       - gatsby-build
